[gd_scene load_steps=6 format=2]

[ext_resource path="res://Common/Player/ShotGun/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Common/Player/ShotGun/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Common/HitHurtBox/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 513
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
damage = 25.0
knock_back_force = 3500.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HitBox"]
